# think_tank

./: CONTRIBUTING.md  README.md  WINDOWS_SETUP.md  conversation_logger.py  create_desktop_shortcut.bat  example_usage.py  pyproject.toml  run_thinktank.bat  run_thinktank.ps1  run_thinktank.py  setup_notion.py  thinktank_report.md
src/ultimate_thinktank/: crew.py  main.py
src/ultimate_thinktank/config/: agents.yaml  tasks.yaml
src/ultimate_thinktank/tools/: notion_tools.py  web_search_tools.py
