[project]
name = "ultimate_thinktank"
version = "0.1.0"
description = "ultimate_thinktank using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.2"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "notion-client>=2.0.0",
    "duckduckgo-search>=4.1.0",
    "requests>=2.31.0"
]

[project.scripts]
ultimate_thinktank = "run_thinktank:main"
thinktank = "run_thinktank:main"
run_crew = "run_thinktank:main"
train = "ultimate_thinktank.main:train"
replay = "ultimate_thinktank.main:replay"
test = "ultimate_thinktank.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
